# DarkForest

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  migration.py
backend/app/api/: admin.py  auth.py  deps.py  rooms.py  websocket.py
backend/app/migrate/: __init__.py  migrate.py  migration_manager.py
backend/app/models/: base.py  message.py  rate_limit_log.py  room.py  system_config.py  user.py  version.py
backend/app/schemas/: config.py  message.py  room.py  user.py
backend/app/services/: auth.py  connection_manager.py  rate_limiter.py  room_service.py
frontend/: .gitignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: button.tsx  dialog.tsx
frontend/src/hooks/: useTheme.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AdminLoginPage.tsx  AdminPage.tsx  ChatPage.tsx  HomePage.tsx
frontend/src/types/: index.ts
nginx/: default.conf
